--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path": "^0.12.7",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
