--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "convert-yaml": "^2.0.5",
+    "date-fns": "^3.0.5",
     "ethers": "5.6.9",
     "fs": "0.0.1-security",
     "graphql": "^16.6.0",
